# app/controllers/api/v1/hrm/tasks_controller.rb
@@ -9,6 +9,18 @@ class Api::V1::Hrm::TasksController < Api::V1::Hrm::BaseController
     render json: @task
   end
 
+  def create
+    @task = Task.new(task_params)
+    @task.assigned_by = current_user
+    @task.user = current_user # Link user_id
+
+    if @task.save
+      render json: @task, status: :created
+    else
+      render json: { errors: @task.errors.full_messages }, status: :unprocessable_entity
+    end
+  end
+
   def update
     @task = current_employee.tasks.find(params[:id])
     if @task.update(task_params)
@@ -21,6 +33,6 @@ class Api::V1::Hrm::TasksController < Api::V1::Hrm::BaseController
   private
 
   def task_params
-    params.require(:task).permit(:status)
+    params.require(:task).permit(:status, :title, :description, :priority, :due_date, :employee_id)
   end
 end
